# esp32-iaq-sensor

./: .gitignore  CMakeLists.txt  Makefile  README.md  generate-version.sh  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.nodemcu-32s  sdkconfig.nodemcu-32s.old
components/bme680/: CMakeLists.txt  bme680.c  bsec_datatypes.h  bsec_integration.c  bsec_integration.h  bsec_iot_example.c  bsec_iot_example.h
components/config/: application_version.h
components/generic_io/: CMakeLists.txt  generic_io.c  generic_io.h
components/https_post/: CMakeLists.txt  firebase_conf.h  http_post.c  http_post.h
components/wifi_prov/: CMakeLists.txt  wifi_prov.c  wifi_prov.h
kicad-design-files/: Adafruit_BME680-eagle-import.lib  IAQ_Project-cache.lib  IAQ_Project-rescue.kicad_sym  IAQ_Project.kicad_pcb  IAQ_Project.kicad_pcb-bak  IAQ_Project.kicad_prl  IAQ_Project.kicad_pro  IAQ_Project.kicad_sch  IAQ_Project.net  IAQ_Project.pro  IAQ_Project.sch  IAQ_Project.sch-bak  fp-info-cache  sym-lib-table
kicad-design-files/IAQ_Gerber_Files/: IAQ_Project-B_Cu.gbr  IAQ_Project-B_Mask.gbr  IAQ_Project-B_Paste.gbr  IAQ_Project-B_SilkS.gbr  IAQ_Project-Edge_Cuts.gbr  IAQ_Project-F_Cu.gbr  IAQ_Project-F_Mask.gbr  IAQ_Project-F_Paste.gbr  IAQ_Project-F_SilkS.gbr  IAQ_Project-NPTH.drl  IAQ_Project-PTH.drl  IAQ_Project-job.gbrjob
kicad-design-files/lib/: iaq_logo.kicad_mod
main/: main.c
src/: main.c  main.cpp
ui/: app.py  requirements.txt
